# artsum

./: .gitignore  .justfile  .typos.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  mise.toml
.github/workflows/: ci.yml  release.yml
src/: checksum.rs  error.rs  main.rs  manifest.rs
src/checksum/: blake.rs  crc32.rs  md5.rs  mod.rs  sha.rs  xxhash.rs
src/cli/: completions.rs  generate.rs  mod.rs  refresh.rs  verify-old.rs  verify.rs
src/cli/common/: display.rs  manifest.rs  mod.rs  task.rs
src/cli/generate/: display.rs  mod.rs  task.rs
src/cli/refresh/: display.rs  mod.rs  task.rs
src/cli/verify/: display.rs  mod.rs  task.rs
src/manifest/: artsum.rs  b2sum.rs  md5sum.rs  mod.rs  sfv.rs  sha1sum.rs  sha256sum.rs  sha512sum.rs
xtask/: Cargo.toml
xtask/src/: main.rs
