[package]
name = "sfv-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
async-trait = "0.1.86"
blake2 = "0.10.6"
chrono = "0.4.40"
clap = { version = "4.5.27", features = ["derive"] }
colored = "3.0.0"
crc32fast = "1.4.2"
glob = "0.3.2"
hex = "0.4.3"
log = "0.4.26"
md5 = "0.7.0"
pathdiff = "0.2.3"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha1 = "0.10.6"
sha2 = "0.10.8"
simplelog = "0.12.2"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
xxhash-rust = { version = "0.8.12", features = ["xxh3", "xxh32", "xxh64"] }

[dev-dependencies]
tempfile = "3.5.0"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
serde_json = "1.0"
