[workspace]
members = [".", "xtask"]

[package]
name = "artsum"
description = "A simple command-line tool for generating and verifying a directory manifest of checksums"
repository = "https://github.com/stephen-bunn/artsum"
version = "0.2.0"
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["command-line", "checksum", "manifest"]
categories = ["command-line-utilities"]
exclude = [".github", ".gitignore", ".justfile", "cliff.toml"]

[package.metadata.deb]
assets = [
    ["target/man/artsum.1", "usr/share/man/man1/", "644"],
    ["target/man/artsum-generate.1", "usr/share/man/man1/", "644"],
    ["target/man/artsum-verify.1", "usr/share/man/man1/", "644"],
    ["target/man/artsum-refresh.1", "usr/share/man/man1/", "644"],
]

[dependencies]
anyhow = "1.0.93"
async-trait = "0.1.86"
blake2 = "0.10.6"
chrono = "0.4.40"
clap = { version = "4.5.51", features = ["color", "derive"] }
clap_complete = "4.5.60"
colored = "3.0.0"
dirs = "6.0.0"
crc32fast = "1.4.2"
glob = "0.3.2"
hex = "0.4.3"
ignore = "0.4.23"
log = "0.4.26"
md5 = "0.7.0"
pathdiff = "0.2.3"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha1 = "0.10.6"
sha2 = "0.10.8"
simplelog = "0.12.2"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
xxhash-rust = { version = "0.8.12", features = ["xxh3", "xxh32", "xxh64"] }

[dev-dependencies]
tempfile = "3.5.0"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
serde_json = "1.0"
fake = { version = "4.0.0", features = ["derive"] }
proptest = "1.6.0"
